--- a/GroundUp.Api/Pages/Clients/Create.cshtml
+++ b/GroundUp.Api/Pages/Clients/Create.cshtml
@@ -96,7 +96,7 @@
 
             <div class="p-4">
                 <div class="col-md-2 offset-10">
-                    <button style="width: 100%" class="btn  btn-outline-primary" asp-page-handler="UpdateInfo">Save</button>
+                    <button  class="btn btn-outline-secondary w-100" asp-page-handler="UpdateInfo">Save</button>
                 </div>
             </div>
         </div>
