--- a/GroundUp.Api/Pages/MembershipTypes/Index.cshtml
+++ b/GroundUp.Api/Pages/MembershipTypes/Index.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="col-md-1">
                 <form method="POST">
-                    <a class="btn btn-outline-success" asp-page="./Create">  Create</a>
+                    <a class="btn btn-outline-secondary" asp-page="./Create">  Create</a>
                 </form>
             </div>
         </div>
