--- a/GroundUp.Api/Pages/MembershipTypes/MembershipType.cshtml
+++ b/GroundUp.Api/Pages/MembershipTypes/MembershipType.cshtml
@@ -42,7 +42,7 @@
                         <a class="btn btn-outline-danger w-100" asp-page="/MembershipTypes/Index">Back</a>
                     </div>
                     <div class="col-md-2 offset-8">
-                        <button class="btn btn-outline-primary w-100"><i class="fa-solid fa-floppy-disk"></i></button>
+                        <button class="btn btn-outline-secondary w-100"><i class="fa-solid fa-floppy-disk"></i></button>
                     </div>
                 </div>
             </div>
