--- a/GroundUp.Api/Pages/Memberships/CreateMembership.cshtml
+++ b/GroundUp.Api/Pages/Memberships/CreateMembership.cshtml
@@ -58,7 +58,7 @@
                     <a  class="btn btn-outline-danger w-100" asp-page="/Clients/Details" asp-route-id="@Model.ClientId">Back</a>
                 </div>
                 <div class="col-md-2 offset-8">
-                    <button type="submit" class="btn btn-outline-primary w-100">Save</button>
+                    <button type="submit" class="btn btn-outline-secondary w-100">Save</button>
                 </div>
             </div>
         </div>
