--- a/GroundUp.Api/Pages/Memberships/CreateMembershipSession.cshtml
+++ b/GroundUp.Api/Pages/Memberships/CreateMembershipSession.cshtml
@@ -80,7 +80,7 @@
 
                 <div class="p-4">
                     <div class="col-md-2 offset-10">
-                        <button type="submit" style="width: 100%" class="btn btn-outline-primary">Save</button>
+                        <button type="submit" class="btn btn-outline-secondary w-100">Save</button>
                     </div>
                 </div>
             </div>
