--- a/GroundUp.Api/Pages/Memberships/UpdateMembershipSession.cshtml
+++ b/GroundUp.Api/Pages/Memberships/UpdateMembershipSession.cshtml
@@ -57,7 +57,7 @@
                     <button class="btn btn-outline-danger w-100" asp-page-handler="Delete"><i class="fa fa-trash"></i></button>
                 </div>
                 <div class="col-md-2 offset-8">
-                    <button  class="btn btn-outline-primary w-100" asp-page-handler="Update"><i class="fa fa-floppy-disk"></i></button>
+                    <button  class="btn btn-outline-secondary w-100" asp-page-handler="Update"><i class="fa fa-floppy-disk"></i></button>
                 </div>
             </div>
 
