--- a/GroundUp.Api/Pages/Clients/Details.cshtml
+++ b/GroundUp.Api/Pages/Clients/Details.cshtml
@@ -101,7 +101,7 @@
                         </div>
                         <div class="row mt-2 px-4">
                             <div class="col-md-2 offset-10">
-                                <button style="width: 100%" asp-page-handler="UpdateInfo" class="btn btn-outline-primary"><i class="fa-solid fa-floppy-disk"></i></button>
+                                <button style="width: 100%" asp-page-handler="UpdateInfo" class="btn btn-outline-secondary"><i class="fa-solid fa-floppy-disk"></i></button>
                             </div>
                         </div>
                     </form>
@@ -239,7 +239,7 @@
                             <div class="col-md-6">
                                 <div class="m-2 card flex-grow-1">
                                     <div class="d-flex flex-row justify-content-between w-100 border-bottom pb-2">
-                                        <div class="bg-light-green p-4 m-2 text-white rounded">
+                                        <div class="bg-groundup-green p-4 m-2 text-white rounded">
                                             <i class="fa-solid fa-calendar"></i>
                                         </div>
                                         <div class="d-flex flex-column m-2 w-100 text-right">
@@ -257,7 +257,7 @@
                             <div class="col-md-6">
                                 <div class="m-2 card flex-grow-1">
                                     <div class="d-flex flex-row justify-content-between w-100 border-bottom pb-2">
-                                        <div class="bg-light-blue p-4 m-2 text-white rounded">
+                                        <div class="bg-groundup-blue p-4 m-2 text-white rounded">
                                             <i class="fa-solid fa-dumbbell"></i>
                                         </div>
                                         <div class="d-flex flex-column m-2 w-100 text-right">
@@ -285,7 +285,7 @@
                             <form method="POST" asp-page-handler="AddNewSession">
                                 <input asp-for="ActiveMembershipId" hidden />
                                 <input asp-for="Id" hidden />
-                                <button type="submit" class="btn btn-outline-primary w-100"><i class="fa-solid fa-plus"> </i>  </button>
+                                <button type="submit" class="btn btn-outline-secondary w-100"><i class="fa-solid fa-plus"> </i>  </button>
                             </form>
                         </div>
                     </div>
