--- a/GroundUp.Api/Pages/Clients/Index.cshtml
+++ b/GroundUp.Api/Pages/Clients/Index.cshtml
@@ -12,7 +12,7 @@
             </div>
             <div class="col-md-1">
                 <form method="POST">
-                    <button class="btn btn-outline-success" asp-page-handler="Second">Create</button>
+                    <button class="btn btn-outline-secondary" asp-page-handler="Second">Create</button>
                 </form>
             </div>
         </div>
