--- a/GroundUp.Api/Pages/Memberships/Membership.cshtml
+++ b/GroundUp.Api/Pages/Memberships/Membership.cshtml
@@ -110,7 +110,7 @@
                     <div class="offset-10 col-md-2">
                         <form method="POST" asp-page-handler="AddNewSession">
                             <input asp-for="MembershipId" id="create-new" hidden />
-                            <button type="submit" class="btn btn-outline-primary w-100"><i class="fa-solid fa-plus"> </i>  </button>
+                            <button type="submit" class="btn btn-outline-secondary w-100"><i class="fa-solid fa-plus"> </i>  </button>
                         </form>
 
                     </div>
