--- a/GroundUp.Api/Pages/Shared/_UpdateMembershipSession.cshtml
+++ b/GroundUp.Api/Pages/Shared/_UpdateMembershipSession.cshtml
@@ -74,8 +74,7 @@
 
                 </div>
                 <div class="col-md-2 offset-8">
-                    <button class="btn btn-outline-primary w-100" asp-page-handler="UpdateMembershipSession"><i class="fa-solid fa-floppy-disk"></i></button>
-
+                    <button class="btn btn-outline-secondary w-100" asp-page-handler="UpdateMembershipSession"><i class="fa-solid fa-floppy-disk"></i></button>
                 </div>
             </div>
 
