--- a/GroundUp.Api/wwwroot/css/site.css
+++ b/GroundUp.Api/wwwroot/css/site.css
@@ -96,8 +96,16 @@ btn-small {
     background-color:rgb(75, 192, 192); 
 }
 
-.bg-light-blue {
-    background-color: rgb(54, 162, 235);
+.bg-groundup-blue {
+    background-color: rgb(36 61 101);
+}
+
+.bg-groundup-orange {
+    background-color:rgb(195 116 54) 
+}
+
+.bg-groundup-green {
+    background-color: rgb(69 94 61);
 }
 
 .bg-light-red {
@@ -108,8 +116,16 @@ btn-small {
     color: rgb(75, 192, 192);
 }
 
-.text-light-blue {
-    color: rgb(54, 162, 235);
+.text-groundup-blue {
+    color: rgb(36 61 101);
+}
+
+.text-groundup-orange {
+    color: rgb(195 116 54);
+}
+
+.text-groundup-green {
+    color: rgb(69 94 61);
 }
 
 .text-light-red {
@@ -129,7 +145,7 @@ btn-small {
 .sidebar-logo {
     font-size: 20px;
     padding: 16px;
-    border-bottom: 1px solid white;
+    border-bottom: 0.5px solid white;
 }
 
 .sidebar-item {
@@ -138,6 +154,6 @@ btn-small {
 }
 
 .sidebar-item:hover {
-    background-color: black;
-    color: white;
+    background-color: white;
+    color: black;
 }
